# nest

./: .gitignore  .travis.yml  Cargo.toml  README.md  config.toml.example
doc/: nest-00.md  nest-01.md  nest-02.md  nest-03.md  nest-04.md  nest-05.md  nest-06.md  nest-07.md  nest-08.md  nest-09.md  nest-10.md  nest-11.md  nest-12.md  nest-13.md
libnest/: Cargo.toml  Config.toml
libnest/src/: chroot.rs  config.rs  config_parser.rs  error.rs  errors.rs  lib.rs  package.rs  query.rs  repository.rs  system.rs
libnest/src/cache/: errors.rs  mod.rs
libnest/src/cache/available/: mod.rs  query.rs
libnest/src/cache/depgraph/: diff.rs  graph.rs  mod.rs  node.rs  query.rs  requirement.rs
libnest/src/cache/downloaded/: mod.rs
libnest/src/cache/installed/: log.rs  mod.rs
libnest/src/config/: errors.rs  mod.rs  paths.rs  repository.rs
libnest/src/lock_file/: mod.rs
libnest/src/package/: error.rs  errors.rs  identification.rs  manifest.rs  metadata.rs  mod.rs  name.rs  npf.rs  requirement.rs
libnest/src/query/: cache.rs  mod.rs
libnest/src/repository/: cache.rs  mirror.rs  mod.rs
libnest/src/system/: arch.rs  installer.rs  mod.rs
libnest/src/transaction/: download.rs  errors.rs  extract.rs  install.rs  instructions.rs  mod.rs  notifier.rs  orchestrator.rs  pull.rs  remove.rs  transfer.rs  upgrade.rs
nest/: Cargo.toml  Config.toml  Nest.toml.example
nest-cli/: Cargo.toml
nest-cli/src/: main.rs
nest-cli/src/commands/: install.rs  merge.rs  mod.rs  pull.rs  requirement.rs  uninstall.rs
nest-cli/src/commands/operations/: install.rs  mod.rs
nest/src/: error.rs  main.rs  progress.rs  progressbar.rs  query.rs  tty.rs
nest/src/command/: download.rs  install.rs  list.rs  mod.rs  pull.rs  remove.rs  search.rs  uninstall.rs  upgrade.rs
src/: main.rs
src/command/: install.rs  list.rs  pull.rs
tests/: nesttests.py  run.sh
tests/test_0/: run.py
tests/test_001/: run.sh
tests/test_007/: run.py
tests/test_009/: run.py
tests/test_010/: run.py
tests/test_011/: run.py
tests/test_012/: run.py
tests/test_1/: run.py
tests/test_2/: run.py
tests/test_3/: run.py
tests/test_4/: run.py
tests/test_5/: run.py
tests/test_6/: run.py
tests/test_7/: run.py
tests/test_8/: run.py
