[package]
name = "libnest"
version = "0.1.0"
authors = ["Benjamin Grange <benjamin.grange@epitech.eu>"]
description = "Backend library to write a package manager for the Raven Operating System."
homepage = "https://raven-os.org"
repository = "https://github.com/raven-os/nest"
keywords = ["package-manager", "package", "manager", "raven", "nest"]
categories = ["command-line-utilities", "development-tools", "filesystem", "os"]

[badges]
travis-ci = { repository = "raven-os/nest" }
maintenance = { status = "actively-developed" }

[dependencies]
curl = "0.4.11"
serde = "1.0.33"
serde_json = "1.0"
serde_derive = "1.0.33"
toml = "0.4.6"
lazy_static = "1.0.0"
url = "1.7.0"
url_serde = "0.2.0"
flate2 = "1.0.1"
tar = "0.4.15"
failure = "0.1.1"
failure_derive = "0.1.1"