[package]
name = "libnest"
version = "0.1.0"
authors = ["Benjamin Grange <benjamin.grange@epitech.eu>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"]}
failure = "0.1.3"
lazy_static = "1.2.0"
regex = "1.1.0"
semver = { version = "0.9.0", features = ["serde"]}
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.36"
toml = "0.4.10"
url_serde = "0.2.0"
