[package]
name = "nest-cli"
version = "0.1.0"
authors = ["Benjamin Grange <benjamin.grange@epitech.eu>", "Clément Doumergue <clement.doumergue@epitech.eu>"]
edition = "2018"

[dependencies]
curl = "0.4.19"
libnest = { path = "../libnest" }
failure = "0.1.1"
clap = "2.32.0"
colored = "1.7"
indicatif = "0.11.0"
num_cpus = "1.10.0"
threadpool = "1.7.1"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.36"
